--- a/en/meta.yml
+++ b/en/meta.yml
@@ -1,6 +1,6 @@
 ---
-hero_image: images/banner.png
-theme: red
+hero_image: images/weather-logger.png
+theme: blue
 duration: 2
 listed: true
 ingredient: false
