Add empty line before and after untranslatable elements

--- a/en/meta.yml
+++ b/en/meta.yml
@@ -17,7 +17,7 @@ software: ''
 version: 3
 last_tested: 2017-01-01
 steps: 
-- title: 'Introduction: '
+- title: 'Introduction'
 - title: Logging the temperature
 - title: Creating a temperature graph
 - title: 'Challenge: Simulate different weather conditions'
