--- a/hi-IN/meta.yml
+++ b/hi-IN/meta.yml
@@ -21,4 +21,4 @@ steps:
   - title: तापमान रिकॉर्ड करना
   - title: तापमान ग्राफ बनाना
   - title: 'चुनौती: मौसम की विभिन्न स्थितियों का अनुकरण करें'
-  - title: 'चुनौती: रिकॉर्ड नमी या दबाव'
+  - title: 'चुनौती: नमी या दबाव रिकॉर्ड करना'
