Adding completion flags to meta yaml

--- a/ar-SA/meta.yml
+++ b/ar-SA/meta.yml
@@ -17,8 +17,10 @@ software: ''
 version: 3
 last_tested: 2017-01-01
 steps:
-  - title: 'المقدمة'
-  - title: تسجيل درجة الحرارة
-  - title: إنشاء رسم بياني لدرجة الحرارة
-  - title: 'التحدي: محاكاة الظروف الجوية المختلفة'
-  - title: 'التحدي: تسجيل درجات الرطوبة أو الضغط'
+- title: المقدمة
+  completion: engaged
+- title: تسجيل درجة الحرارة
+- title: إنشاء رسم بياني لدرجة الحرارة
+- title: 'التحدي: محاكاة الظروف الجوية المختلفة'
+  completion: internal
+- title: 'التحدي: تسجيل درجات الرطوبة أو الضغط'
