--- a/hi-IN/meta.yml
+++ b/hi-IN/meta.yml
@@ -17,8 +17,10 @@ software: ''
 version: 3
 last_tested: 2017-01-01
 steps:
-  - title: 'परिचय'
-  - title: तापमान रिकॉर्ड करना
-  - title: तापमान ग्राफ बनाना
-  - title: 'चुनौती: मौसम की विभिन्न स्थितियों का अनुकरण करें'
-  - title: 'चुनौती: नमी या दबाव रिकॉर्ड करना'
+- title: परिचय
+  completion: engaged
+- title: तापमान रिकॉर्ड करना
+- title: तापमान ग्राफ बनाना
+- title: 'चुनौती: मौसम की विभिन्न स्थितियों का अनुकरण करें'
+  completion: internal
+- title: 'चुनौती: नमी या दबाव रिकॉर्ड करना'
