--- a/fr-FR/meta.yml
+++ b/fr-FR/meta.yml
@@ -7,7 +7,8 @@ ingredient: false
 copyedit: false
 curriculum: 2, design-0, programming-2, phys-comp-0, manufacture-0, community-0
 title: Enregistreur météo
-description: Enregistre les données des capteurs, puis affiche-les sous forme de graphique linéaire.
+description: Enregistre les données des capteurs, puis affiche-les sous forme de graphique
+  linéaire.
 original_url: https://codeclubprojects.org/en-GB/sense-hat/weather-logger
 interests: weather
 technologies: sense-hat
@@ -17,8 +18,11 @@ software: ''
 version: 3
 last_tested: 2017-01-01
 steps:
-  - title: Introduction
-  - title: Enregistrement de la température
-  - title: Création d'un graphique de température
-  - title: 'Défi : Simuler différentes conditions météo'
-  - title: "Défi : Enregistrer l'humidité ou la pression"
+- title: Introduction
+- title: Enregistrement de la température
+- title: Création d'un graphique de température
+  completion:
+  - engaged
+  - internal
+- title: 'Défi : Simuler différentes conditions météo'
+- title: 'Défi : Enregistrer l''humidité ou la pression'
