--- a/nl-NL/meta.yml
+++ b/nl-NL/meta.yml
@@ -18,9 +18,10 @@ version: 3
 last_tested: 2017-01-01
 steps:
 - title: Inleiding
-  completion: engaged
 - title: Vastleggen van temperatuur
 - title: Een temperatuurgrafiek maken
+  completion:
+  - engaged
+  - internal
 - title: 'Uitdaging: simuleer verschillende weersomstandigheden'
-  completion: internal
 - title: 'Uitdaging: registreer de vochtigheid of druk'
