--- a/ar-SA/meta.yml
+++ b/ar-SA/meta.yml
@@ -18,9 +18,10 @@ version: 3
 last_tested: 2017-01-01
 steps:
 - title: المقدمة
-  completion: engaged
 - title: تسجيل درجة الحرارة
 - title: إنشاء رسم بياني لدرجة الحرارة
+  completion:
+  - engaged
+  - internal
 - title: 'التحدي: محاكاة الظروف الجوية المختلفة'
-  completion: internal
 - title: 'التحدي: تسجيل درجات الرطوبة أو الضغط'
