--- a/en/meta.yml
+++ b/en/meta.yml
@@ -18,9 +18,10 @@ version: 3
 last_tested: 2017-01-01
 steps:
 - title: Introduction
-  completion: engaged
 - title: Logging the temperature
 - title: Creating a temperature graph
+  completion:
+  - engaged
+  - internal
 - title: 'Challenge: Simulate different weather conditions'
-  completion: internal
 - title: 'Challenge: Record humidity or pressure'
