--- a/kn-IN/meta.yml
+++ b/kn-IN/meta.yml
@@ -18,9 +18,10 @@ version: 3
 last_tested: 2017-01-01
 steps:
 - title: ಪರಿಚಯ
-  completion: engaged
 - title: ತಾಪಮಾನವನ್ನು ನಮೂದಿಸುವುದು
 - title: ತಾಪಮಾನ ಗ್ರಾಫ್ ರಚಿಸಲಾಗುತ್ತಿದೆ
+  completion:
+  - engaged
+  - internal
 - title: 'ಸವಾಲು: ವಿಭಿನ್ನ ಹವಾಮಾನ ಪರಿಸ್ಥಿತಿಗಳನ್ನು ಅನುಕರಿಸಿ'
-  completion: internal
 - title: 'ಸವಾಲು: ಆರ್ದ್ರತೆ ಅಥವಾ ಒತ್ತಡವನ್ನು ರೆಕಾರ್ಡ್ ಮಾಡಿ'
