--- a/mr-IN/meta.yml
+++ b/mr-IN/meta.yml
@@ -18,9 +18,10 @@ version: 3
 last_tested: 2017-01-01
 steps:
 - title: परिचय
-  completion: engaged
 - title: तापमान लॉग करने
 - title: तापमान आलेख (ग्राफ) तैयार करणे
+  completion:
+  - engaged
+  - internal
 - title: 'आव्हान: भिन्न हवामान परिस्थितीचे अनुकरण करा'
-  completion: internal
 - title: 'आव्हान: आर्द्रता किंवा प्रेशर ची नोंद करा'
