--- a/en/meta.yml
+++ b/en/meta.yml
@@ -2,7 +2,7 @@
 hero_image: images/weather-logger.png
 theme: blue
 duration: 2
-listed: true
+listed: false
 ingredient: false
 copyedit: false
 curriculum: 2, design-0, programming-2, phys-comp-0, manufacture-0, community-0
